fix profile style spacing

--- a/src/containers/UserProfileContainer.css
+++ b/src/containers/UserProfileContainer.css
@@ -112,6 +112,9 @@
   gap: 8px;
 }
 
+.profile__stat--link .profile__stat-label {
+  padding-left: 3.5px;
+}
 .profile__stat--link {
   cursor: pointer;
 }
